labs/ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-space
  labels:
    name: ingress-space
