labs/ingress/ingress-pay.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-pay
  namespace: critical-space
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: pay-service
          servicePort: 8282
        path: /pay
